addanimated card commit

--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -5,7 +5,7 @@
   --primary-color: #ffffff;
   --secondary-color: #3fbbc0;
   --accent-color: #626262;
-  /*--background-color: #ecf0f1; /* Main background color */
+  --paragraph-color: #444444;
   /*--text-color: #2c3e50; /* Primary text color */
   /*--text-light-color: #bdc3c7; /* Light text color */
   /*--border-color: #dcdde1; /* Border color */
