--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -25,6 +25,7 @@
 }
 body {
   font-family: "Poppins", sans-serif !important;
+  overflow-x: hidden !important;
 }
 .flex {
   display: flex;
@@ -42,4 +43,24 @@ ul {
   list-style: none;
   margin: 0 !important;
   padding: 0 !important;
+}
+.Main__Title {
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  position: relative;
+  text-align: center;
+  color: var(--paragraph-color);
+}
+.Main__Title::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 50px;
+  height: 3px;
+  background: #3fbbc0;
+  bottom: 0;
+  left: calc(50% - 25px);
 }
