--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -27,6 +27,10 @@ body {
   font-family: "Poppins", sans-serif !important;
   overflow-x: hidden !important;
 }
+main {
+  font-family: "Poppins", sans-serif !important;
+  overflow-x: hidden !important;
+}
 .flex {
   display: flex;
   align-items: center;
