--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -30,6 +30,7 @@ body {
 main {
   font-family: "Poppins", sans-serif !important;
   overflow-x: hidden !important;
+  overflow-y: hidden;
 }
 .flex {
   display: flex;
@@ -67,4 +68,30 @@ ul {
   background: #3fbbc0;
   bottom: 0;
   left: calc(50% - 25px);
+}
+.Main_wraper_grid {
+  margin: auto;
+  width: 86%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.4em;
+  padding-top: 3.6rem;
+  padding-bottom: 2rem;
+}
+@media (max-width: 1080px) {
+  .Main_wraper_grid {
+    width: 96%;
+  }
+}
+@media (max-width: 991px) {
+  .Main_wraper_grid {
+    grid-template-columns: repeat(2, 1fr);
+    width: 86%;
+  }
+}
+@media (max-width: 720px) {
+  .Main_wraper_grid {
+    max-width: 90%;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
