--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -49,30 +49,34 @@ ul {
   margin: 0 !important;
   padding: 0 !important;
 }
-
-.Main_wraper_grid {
+.Main_wraper {
   margin: auto;
   width: 86%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 1.4em;
+
   padding-top: 3.6rem;
   padding-bottom: 2rem;
 }
+.Main_wraper_grid {
+  width: 100%;
+  display: grid;
+  gap: 1.4em;
+  grid-template-columns: repeat(4, 1fr);
+}
 @media (max-width: 1080px) {
+  .Main_wraper {
+    width: 90%;
+  }
   .Main_wraper_grid {
-    width: 96%;
+    width: 100%;
   }
 }
 @media (max-width: 991px) {
   .Main_wraper_grid {
     grid-template-columns: repeat(2, 1fr);
-    width: 86%;
   }
 }
 @media (max-width: 720px) {
   .Main_wraper_grid {
-    max-width: 90%;
     grid-template-columns: repeat(1, 1fr);
   }
 }
