--- a/src/app/(website)/globals.css
+++ b/src/app/(website)/globals.css
@@ -9,6 +9,7 @@
   --secondary-color: #3fbbc0;
   --accent-color: #626262;
   --paragraph-color: #444444;
+  --heading-color: #555555;
   /* --text-light-color: #bdc3c7; /* Light text color */
   /*--text-color: #2c3e50; /* Primary text color */
   /*--border-color: #dcdde1; /* Border color */
@@ -60,6 +61,7 @@ ul {
   max-width: 1300px;
   padding-top: 3.6rem;
   padding-bottom: 2rem;
+  max-width: 1300px;
 }
 .Main_wraper_grid {
   width: 100%;
