--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -29,6 +29,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+html {
+  font-size: 14px;
+}
 body {
   font-family: "Poppins", sans-serif !important;
   overflow-x: hidden !important;
